--- a/monitoring/src/main/resources/bootstrap.yml
+++ b/monitoring/src/main/resources/bootstrap.yml
@@ -7,3 +7,9 @@ spring:
       fail-fast: true
       password: ${CONFIG_SERVICE_PASSWORD}
       username: user
+
+  management:
+    endpoints:
+      web:
+        exposure:
+          include: '*
