禁用日志timestamp输出

--- a/piggyMetrics-swarm-compose-aliyun.yml
+++ b/piggyMetrics-swarm-compose-aliyun.yml
@@ -135,7 +135,7 @@ services:
       aliyun.scale: '1'
       aliyun.log_store_requestlog: stdout  # 采集stdout日志到requestlog日志库中
       aliyun.log_ttl_requestlog: 30  # 设置requestlog日志库日志数据保存30天
-      aliyun.log.timestamp: true # Docker 在收集日志的时候可以选择是否添加 timestamp
+      aliyun.log.timestamp: false # Docker 在收集日志的时候可以选择是否添加 timestamp
       aliyun.depends: config
     volumes:
       - 'volume_name_piggymetrics:/data/oss:rw'
