RDS 服务通过 account-db 来引用

--- a/account-service/src/main/resources/application.yml
+++ b/account-service/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://${RDS_URL}:3306/piggymetrics
+    url: jdbc:mysql://account-db:3306/piggymetrics
     username: piggymetrics
     password: ${RDS_PASSWORD}
 
