--- a/config/src/main/resources/shared/gateway.yml
+++ b/config/src/main/resources/shared/gateway.yml
@@ -19,7 +19,7 @@ zuul:
   routes:
     auth-service:
         path: /uaa/**
-        url: http://auth-service:5000
+        url: http://auth-service.local
         stripPrefix: false
         sensitiveHeaders:
 
